--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>spring-petclinic</artifactId>
     <version>4.2.6-SNAPSHOT</version>
 
-    <name>petclinic</name>
+    <name>petclinic-uat</name>
     <packaging>war</packaging>
 
     <properties>
